# license-compliance-checker

./: .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  ENTERPRISE_ROADMAP.md  LICENSE  NOTICE  README.md  REMAINING_TASKS_MILESTONE_3.md  SECURITY.md  TESTING_GUIDE.md  TEST_FIXES.md  alembic.ini  azure-pipelines.yml  docker-compose.override.yml.example  docker-compose.prod.yml  docker-compose.yml  environment.yml  index.html  pyproject.toml  requirements-test.txt  requirements.txt  sitemap.xml
.circleci/: config.yml  orb.yml
.conda-lcc/conda-meta/: bzip2-1.0.8-h500dc9f_8.json  ca-certificates-2026.1.4-hbd8a1cb_0.json  history  libexpat-2.7.3-heffb93a_0.json  libffi-3.5.2-hd1f9c09_0.json  liblzma-5.8.2-h11316ed_0.json  libsqlite-3.51.2-hb99441e_0.json  libzlib-1.3.1-hd23fc13_2.json  ncurses-6.5-h0622a9a_3.json  openssl-3.6.1-hb6871ef_1.json  packaging-26.0-pyhcf101f3_0.json  pip-26.0-pyh8b19718_0.json  python-3.11.14-h74c2667_3_cpython.json  readline-8.3-h68b038d_0.json  setuptools-80.10.2-pyh332efcf_0.json  tk-8.6.13-h7142dee_3.json  tzdata-2025c-hc9c84f9_1.json  wheel-0.46.3-pyhd8ed1ab_0.json
.conda-lcc/etc/: aau_token
.conda-lcc/lib/: libbz2.1.0.8.dylib  libexpat.1.11.1.dylib  libncurses.6.dylib  libncursesw.6.dylib  libsqlite3.3.51.2.dylib  libtcl8.6.dylib  libtinfo.6.dylib  libtinfow.6.dylib  tclConfig.sh  tkConfig.sh
.github/workflows/: ci.yml  docs.yml  lcc-scan.yml  publish-pypi.yml  test-action.yml  test-pypi.yml
.jenkins/: Jenkinsfile  README.md
AI_ETHICS/: index.html
CHANGELOG/: index.html
CONTRIBUTING/: index.html
archive/DASHBOARD_FIX/: index.html
archive/FEEDBACK/: index.html
archive/QUICK_START/: index.html
archive/RECOMMENDATIONS/: index.html
archive/REQUIREMENTS/: index.html
archive/UI_DIALOG_FIX/: index.html
dashboard/: Dockerfile  next.config.mjs  package-lock.json  package.json
deployment/: index.html
docs/: AI_ETHICS.md  PRD-v1.1.md  README.md  REQUIREMENTS.md  TESTING_GUIDE.md  ci.md  implementation-plan.md  phase1_todo.md  phase2_todo.md
monitoring/: prometheus.yml
nginx/: nginx.conf
policies/: copyleft-friendly.yaml  permissive.yaml
scripts/: backup.sh  build_policy_bundle.py  copy_policy_template.py  init-db.sql  init_db_async.py  list_models.py  restore.sh  test_ai_integration.py  verify_fireworks.py
search/: search_index.json
src/lcc/: cache.py  (+5 more)
tests/: __init__.py  test_cache.py  test_llm_config.py  test_policy_manager.py  test_smart_chunking.py
vscode-extension/: README.md  package-lock.json  package.json  tsconfig.json
(+465 files in other folders)
